--- a/index.html
+++ b/index.html
@@ -8,17 +8,36 @@
     <title>teste html</title>
 </head>
 <body>
-    <h1>
-        Sobre a Barbearia Alura
-    </h1>
-    <p>
-        Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
-    </p>
-    <p style="font-size: 20px;">
-        <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em>
-    </p>
-    <p>
-        Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
-    </p>
+    <header>
+        <h1 class="titulo-p">
+            Barbearia do BigP
+        </h1>
+    </header>
+    <div class="principal">
+        <img id="bunner" src="barb.jpg">
+        <h2 class="txt-c">
+            Sobre a Barbearia Alura
+        </h2>
+        <p>
+            Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
+        </p>
+        <p>
+            <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em>
+        </p>
+        <p>
+            Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
+        </p>
+    </div>
+    <div class="beneficios">
+        <h3 class="txt-c">beneficios</h3>
+        <ul>
+            <li class="itens">atendimento aos clientes</li>
+            <li class="itens">espaco difenciado</li>
+            <li class="itens">localizacao</li>
+            <li class="itens">proficionais qualificados</li>
+        </ul>
+
+        <img class="img-b" src="ben.png" alt="">
+    </div>
 </body>
 </html>
